--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,40 @@
     padding:0;
 }
 
+html,
+body { 
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
+    padding: 10px;
+}
+
 #pokemon_box {
     position: relative;
     display: block;
     border: 1px solid black;
     width: 200px;
     height: 200px;
-    padding: 20px;
-    margin: 20px;
+    padding: 0px;
+    margin: 0px;
+    align-items: center;
+    justify-content: center;
 }
+
+#pokemon_uno {
+    width: auto;
+    height : auto;
+    max-height: 100%;
+    max-width: 100%;
+}
+
+.pokebox {
+    height: 100%;
+    background: #CCCCCC;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 
